cambios en package.json

--- a/public/Salud.html
+++ b/public/Salud.html
@@ -86,7 +86,7 @@
     <!-- Project One -->
     <div class="row">
       <div class="col-md-7">
-          <img style="height: 300px; width:700px" class="img-fluid rounded mb-3 mb-md-0" src="http://2.bp.blogspot.com/-oA5FK_52gYE/UeK5f5og21I/AAAAAAAAAR4/hDbZbnw9ToA/s1600/IMG_0513.JPG"alt="">
+          <img style="height: 300px; width:700px" class="img-fluid rounded mb-3 mb-md-0" src="http://2.bp.blogspot.com/-oA5FK_52gYE/UeK5f5og21I/AAAAAAAAAR4/hDbZbnw9ToA/s1600/IMG_0513.JPG">
       </div>
       <div class="col-md-5">
         <h3 style="text-align: center" ><strong>Enfermedades Cronicas</strong></h3>
