--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script type="javascript" src="server.js"></script>
+  <script type="text/javascript" src="server.js"></script>
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
