--- a/public/Adivinacion.html
+++ b/public/Adivinacion.html
@@ -15,6 +15,9 @@
 
   <!-- Custom styles for this template -->
   <link href="/modern-business.css" rel="stylesheet">
+  <!-- Start of  Zendesk Widget script -->
+  <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=693c0fc1-20c5-4dd9-b575-a9fe6288e53c"> </script>
+<!-- End of  Zendesk Widget script -->
 
 </head>
 
@@ -29,14 +32,14 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" >
-          <img style="height: 460px; width:1400px" src="/images/atena.jpg" >
+          <img style="height: 460px; width:100%" src="/images/atena.jpg" >
           <div class="carousel-caption d-none d-md-block">
             <h3>Atena de Eggun</h3>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" >
-          <img style="height: 460px; width:1400px" src="/images/trono.jpg" alt="">
+          <img style="height: 460px; width:100%" src="/images/trono.jpg" alt="">
           <div class="carousel-caption d-none d-md-block">
             <h3>Trono de los Orishas </h3>
           </div>
@@ -116,7 +119,7 @@
     <!-- Project Three -->
     <div class="row">
       <div class="col-md-7">
-          <img style="height: 300px; width:700px"class="img-fluid rounded mb-3 mb-md-0" src="/images/Chamalones.jpg">
+          <img style="height: 300px; width:700px"class="img-fluid rounded mb-3 mb-md-0" src="/images/chamalones.jpg">
       </div>
       <div class="col-md-5">
         <h1 class="text-center"><strong>Oraculo Chamalones</strong></h1>
