--- a/public/Politicas.html
+++ b/public/Politicas.html
@@ -102,7 +102,7 @@
     <p>☆ Al solicitar una consulta usted está aceptando que es mayor de edad y que el único costo de la consulta es el que aplica en según el acuerdo al su operador de telefonía.</p>
     <p>☆ Si por alguna razón usted no está de satisfecho con su experiencia con nosotros no dude en ponerse en contacto con nosotros y con gusto le atenderemos para darle prioridad a sus dudas e inquietudes.</p>
     <hr>
-    <h1 style="text-align: center">POLÍTICAS DE REEMBOLSO Y DEVOLUCIÓN.</h1>
+    <h1 style="text-align: center">POLÍTICAS DE REMBOLSO Y DEVOLUCIÓN.</h1>
     <p>☆ Una vez terminado el servicio usted podra contactarnos e informarnos sobre su experiencia y satisfacción.</p>
     <p>☆ Por políticas de  nuestra página web no hacemos devoluciones de dinero ya que al  hacer un trabajo utilizamos materiales</p>
   </div>
