--- a/public/index.html
+++ b/public/index.html
@@ -78,10 +78,10 @@
     <div class="row">
       <div class="col-lg-6 ">
         <h1 class="text-center"><strong>Brujos y Santeros</strong></h1>
-        <p class="text-center">En Brujos y Santeros Realizamos todo tipo de faenas para mejorar tu vida y la vida de las
+        <p class="text-center">En Brujos y Santeros Realizamos todo tipo de consultas para mejorar tu vida y la vida de las
         personas que te rodean, Contamos con los mejores Brujos y Santeros a nivel mundial con mas de 30 años
         de experiencia brindando apoyo espiritual y lo mas importante ayudandote a crecer como Persona</p>
-        <h1 class="text-center"><strong>Faena 100% garantizada</strong></h1>
+        <h1 class="text-center"><strong>trabajos 100% garantizada</strong></h1>
         <h3 class="text-center">si no obtienes resultados positivos te hacemos devolucion de tu dinero en su totalidad</h3>
         <div class="text-center ">
           <h2 class="mt-2"><strong>Tel !!(1)559-478-1428!!</strong></h2>
