--- a/public/Adivinacion.html
+++ b/public/Adivinacion.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Brujos y Santeros...</title>
+  <title>Maestros y Santeros</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -143,7 +143,7 @@
       <div class="col-md-5">
         <h1 class="text-center"><strong>Tarot</strong></h1>
         <p class="text-center">Oráculo de adivinación por medio de cartas donde podras conocer lo que te depara el futuro
-          y conocer los errores del pasado que estan afectando tu presente, contamos con brujos y santeros con más de 30 años de Experiencia.</p>
+          y conocer los errores del pasado que estan afectando tu presente, contamos con los mejores Maestros y Brujas con más de 30 años de Experiencia.</p>
           <div class="mt-4">
             <h2 class="text-center"> consulta completamente gratis </h2>
             <h2 class="text-center">(+1)559-478-1428</h2>
@@ -159,7 +159,7 @@
       <div class="col-md-5">
         <h1 class="text-center"><strong>Baraja Española</strong></h1>
         <p class="text-center">Oráculo de adivinación por medio de cartas españolas donde podras conocer lo que te depara el futuro
-          y conocer los errores del pasado que estan afectando tu presente, contamos con brujos y santeros con más de 30 años de Experiencia.</p>
+          y conocer los errores del pasado que estan afectando tu presente, contamos con los mejores Maestros y Brujas con más de 30 años de Experiencia.</p>
           <div class="mt-4">
             <h2 class="text-center"> consulta completamente gratis </h2>
             <h2 class="text-center">(+1)559-478-1428</h2>
