--- a/public/Amor.html
+++ b/public/Amor.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Brujos y Santeros...</title>
+  <title>Maestros y Santeros</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -107,8 +107,8 @@
       <div class="col-md-5">
         <h3 style= "text-align:center">Endulzamientos de Amor</h3>
         <p class="text-center"><strong>¿ Sientes que tu pareja se comporta extraña, de mal humor, prepotente y sientes que no es la misma persona?</strong></p>
-        <p>nosotros por medio de nuestros trabajos de undulzamiento, cambiamos todos esos aspectos negativos y le damos una cambio positivo
-        a tu relacion.</p>
+        <p>nosotros por medio de nuestros trabajos de endulzamientos, cambiamos todos esos aspectos negativos y le damos una cambio positivo
+        a tu relacion amorosa.</p>
         <div class="mt-4">
           <h2 style="text-align: center"> consulta completamente gratis </h2>
           <h2 style="text-align: center">(+1)559-478-1428</h2>
