--- a/public/Salud.html
+++ b/public/Salud.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Brujos y Santeros...</title>
+  <title>Maestros y Santeros</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -93,7 +93,7 @@
       </div>
       <div class="col-md-5">
         <h3 style="text-align: center" ><strong>Enfermedades Cronicas</strong></h3>
-        <p class="text-center">Ayudamos a que las personas recuperen la salud y aumenten sus estado animicos, recuperamos la salud quitada por trabajos de burjeria, hechiceria, magia negra,
+        <p class="text-center">Ayudamos a que las personas recuperen la salud y aumenten sus estado animico, recuperamos la salud quitada por trabajos de burjeria, hechiceria, magia negra,
           budoo, entierros. curamos todo tipo de enfermedad <strong>cronica</strong></p>
         <div class="mt-4">
           <h2 style="text-align: center"> consulta completamente gratis </h2>
