--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
 
-  <title>Brujos y Santeros...</title>
+  <title>Maestros y Santeros</title>
   <!-- Start of  Zendesk Widget script -->
   <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=693c0fc1-20c5-4dd9-b575-a9fe6288e53c"> </script>
 <!-- End of  Zendesk Widget script -->
@@ -87,14 +87,13 @@
     <div class="row">
       <div class="col-lg-6 ">
         <h1 class="text-center"><strong>Brujos y Santeros</strong></h1>
-        <p class="text-center">En Brujos y Santeros Realizamos todo tipo de consultas para mejorar tu vida y la vida de las
+        <p class="text-center">Brujos y Santeros Realizamos todo tipo de consultas para mejorar tu vida y la vida de las
         personas que te rodean, Contamos con los mejores Brujos y Santeros a nivel mundial con mas de 30 años
         de experiencia brindando apoyo espiritual y lo mas importante ayudandote a crecer como Persona</p>
-        <h1 class="text-center"><strong>trabajos 100% garantizada</strong></h1>
-        <h3 class="text-center">si no obtienes resultados positivos te hacemos devolucion de tu dinero en su totalidad</h3>
+        <h1 class="text-center"><strong>trabajos 100% garantizados</strong></h1>
         <div class="text-center ">
-          <h2 class="mt-2"><strong>Tel !!(1)559-478-1428!!</strong></h2>
-          <a href="https://hangouts.google.com/" target="_blank"><button style="width: 350px; height: 50px; font-size: x-large"class="btn btn-danger  mt-3">CONSULTA AQUI!!!</button></a>
+          <h2 class="mt-2"><strong>!! (1)559-478-1428 !!</strong></h2>
+          <a href="https://hangouts.google.com/" target="_blank"><button class="btn btn-danger  mt-3">CONSULTA AQUI!!!</button></a>
         </div>
 
       </div>
@@ -114,8 +113,8 @@
             <h4 class="card-title">
               <p class="text-center"> AMOR </p>
             </h4>
-            <p class="card-text text-center"><strong>Oshun</strong> tambien reconocida como la Diosa del amor orisha encargada de traer dulsura y amor
-              a todas las personan que vienen en busca de ayuda, atrayendo el amor de tu vida y llenando tu vida de amor puro</p>
+            <p class="card-text text-center"><strong>Oshun:</strong>Conocida como la Diosa del amor, Orisha encargada de traer dulzura y amor
+              a todas las personan que vienen en busca de ayuda. Atrayendo el amor de tu vida y llenando tu vida de amor puro</p>
           </div>
             <a class="text-center" href="Amor.html"><button class="btn btn-danger">Ver mas..</button></a>
         </div>
@@ -127,8 +126,8 @@
             <h4 class="card-title">
               <p class="text-center">SALUD</p>
             </h4>
-            <p class="card-text text-center"><strong>Obatala</strong> tambien conocido como el dios de la salud orisha encargado de traer salud y tranquilidad, este santo
-              te beneficiara en tu salud y la de tu familia, capas de curar enfermedades cronicas de raiz
+            <p class="card-text text-center"><strong>Obatala:</strong>Conocido como el Dios de la salud, Orisha encargado de traer salud y tranquilidad. Este Santo
+              te beneficiara en tu salud y la de tu familia, capaz de curar enfermedades cronicas de raiz
              </p>
           </div>
             <a class="text-center" href="Salud.html"><button class="btn btn-danger">Ver mas..</button></a>
@@ -141,8 +140,8 @@
             <h4 class="card-title">
               <p class="text-center">DINERO</p>
             </h4>
-            <p class="card-text text-center"><strong>Elegua</strong> tambien conocido como el santo niño de atocha, Dueño de los Caminos, es un orisha capas de dar la Prosperidad
-            Fortuna a todas las personas, que vienen a el clamando por su ayuda </p>
+            <p class="card-text text-center"><strong>Elegua:</strong>Conocido como el Santo NIÑO DE ATOCHA, Dueño de los Caminos, es un Orisha capaz de dar la Prosperidad y
+            Fortuna a todas las personas que vienen a el clamando por su ayuda </p>
           </div>
             <a class="text-center" href="Dinero.html"><button class="btn btn-danger">Ver mas..</button></a>
         </div>
@@ -155,7 +154,7 @@
             <h4 class="card-title">
               <p class="text-center">SUERTE Y PROSPERIDAD</p>
             </h4>
-              <p class="card-text text-center">Encuentra estabilidad en los negocios, proyectos, estabilidad laboral. Mejore su suerte en los juegos de azar, suerte en el amor. </p>
+              <p class="card-text text-center">Encuentra estabilidad en los negocios, proyectos, estabilidad laboral. Mejore su suerte en los juegos de azar.</p>
           </div>
             <a class="text-center" href="Suerte.html"><button class="btn btn-danger">Ver mas..</button></a>
         </div>
