--- a/public/Politicas.html
+++ b/public/Politicas.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Brujos y Santeros</title>
+  <title>Maestros y Santeros</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
