--- a/public/Suerte.html
+++ b/public/Suerte.html
@@ -127,8 +127,9 @@
       </div>
       <div class="col-md-5">
         <h1 class="text-center"><strong>Liberate de la brujeria</strong></h1>
-        <p class="text-center">Aveces sientes cosas negativas en el ambiente, te sientes cansada o cansado, que tu vida no fluye,
-          que el dinero no te alcance para cubrir tus necesidades?, limpia tu cuerpo ante todo hechizo, brujeria que te quiera ver derrotado. </p>
+        <p class="text-center"><strong>Aveces sientes cosas negativas en el ambiente, te sientes cansada o cansado, que tu vida no fluye,
+          que el dinero no te alcance para cubrir tus necesidades?</strong></p>
+          <p class="text-center">limpia tu cuerpo ante todo hechizo y brujeria que te quiera ver derrotado.</p>
           <div class="mt-4">
             <h2 style="text-align: center"> consulta completamente gratis </h2>
             <h2 style="text-align: center">(+1)559-478-1428</h2>
@@ -143,9 +144,9 @@
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Brujos y Santeros &copy; 2019</p>
-      <a class="text-center"href="">
+
         <h2>(+1)559-478-1428</h2>
-      </a>
+
     </div>
     <!-- /.container -->
   </footer>
