--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
         de experiencia brindando apoyo espiritual y lo mas importante ayudandote a crecer como Persona</p>
         <h1 class="text-center"><strong>trabajos 100% garantizados</strong></h1>
         <div class="text-center ">
-          <h2 class="mt-2"><strong>!! (1)559-478-1428 !!</strong></h2>
+          <h2 class="mt-2"><strong>(+1) 559-478-1428</strong></h2>
           <a href="https://hangouts.google.com/" target="_blank"><button class="btn btn-danger  mt-3">CONSULTA AQUI!!!</button></a>
         </div>
 
@@ -113,7 +113,7 @@
             <h4 class="card-title">
               <p class="text-center"> AMOR </p>
             </h4>
-            <p class="card-text text-center"><strong>Oshun:</strong>Conocida como la Diosa del amor, Orisha encargada de traer dulzura y amor
+            <p class="card-text text-center"><strong>Oshun:</strong> Conocida como la Diosa del amor, Orisha encargada de traer dulzura y amor
               a todas las personan que vienen en busca de ayuda. Atrayendo el amor de tu vida y llenando tu vida de amor puro</p>
           </div>
             <a class="text-center" href="Amor.html"><button class="btn btn-danger">Ver mas..</button></a>
@@ -126,7 +126,7 @@
             <h4 class="card-title">
               <p class="text-center">SALUD</p>
             </h4>
-            <p class="card-text text-center"><strong>Obatala:</strong>Conocido como el Dios de la salud, Orisha encargado de traer salud y tranquilidad. Este Santo
+            <p class="card-text text-center"><strong>Obatala:</strong> Conocido como el Dios de la salud, Orisha encargado de traer salud y tranquilidad. Este Santo
               te beneficiara en tu salud y la de tu familia, capaz de curar enfermedades cronicas de raiz
              </p>
           </div>
@@ -140,7 +140,7 @@
             <h4 class="card-title">
               <p class="text-center">DINERO</p>
             </h4>
-            <p class="card-text text-center"><strong>Elegua:</strong>Conocido como el Santo NIÑO DE ATOCHA, Dueño de los Caminos, es un Orisha capaz de dar la Prosperidad y
+            <p class="card-text text-center"><strong>Elegua:</strong> Conocido como el Santo NIÑO DE ATOCHA, Dueño de los Caminos, es un Orisha capaz de dar la Prosperidad y
             Fortuna a todas las personas que vienen a el clamando por su ayuda </p>
           </div>
             <a class="text-center" href="Dinero.html"><button class="btn btn-danger">Ver mas..</button></a>
