--- a/public/index.html
+++ b/public/index.html
@@ -64,15 +64,18 @@
       </a>
     </div>
     <!-- Navigation -->
-    <nav class="navbar  navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar  navbar-expand-lg navbar-ligth" style="background-color: #1ad639">
       <div class="container">
         <p class="navbar-brand" href="index.html">Menu</p>
+          <p><a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><img class="mr-1"style="width:50px;height:50px; margin-left: 400px" src="./images/gmail.jpg"></img></p>
+          <p><a href="https://www.facebook.com/oma.miwua" target="_blank"><img style="width:65px;height:65px" class=" mr-1" src="./images/face.png"></img></p>
+            <p><a href="https://www.facebook.com/oma.miwua" target="_blank"><img style="width:65px;height:65px" class=" mr-1" src="./images/wathsapp.png"></img></p>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+            <li class="nav-item ">
+              <a class="nav-link" style="color:black"href="index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-black">
               <a class="nav-link" href="Politicas.html">Terminos y Condiciones</a>
             </li>
           </ul>
@@ -204,11 +207,11 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-5" style="background-color:#1ad639">
     <div class="container">
-      <p class="m-0 text-center text-white">Brujos y Santeros &copy; 2019</p>
+      <p class="m-0 text-center text-black">Brujos y Santeros &copy; 2019</p>
 
-        <h2 class="text-center text-white">(+1)559-478-1428</h2>
+        <h2 class="text-center text-black">(+1)559-478-1428</h2>
 
     </div>
     <!-- /.container -->
