--- a/public/Dinero.html
+++ b/public/Dinero.html
@@ -32,14 +32,14 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" >
-          <img style="height: 460px; width:100px" src="/images/atena.jpg" >
+          <img style="height: 460px; width:100%" src="/images/atena.jpg" >
           <div class="carousel-caption d-none d-md-block">
             <h3>Atena de Eggun</h3>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" >
-          <img style="height: 460px; width:100px" src="/images/trono.jpg" alt="">
+          <img style="height: 460px; width:100%" src="/images/trono.jpg" alt="">
           <div class="carousel-caption d-none d-md-block">
             <h3>Trono de los Orishas </h3>
           </div>
@@ -66,11 +66,18 @@
         <p class="navbar-brand" href="index.html">Menu</p>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+            <li class="nav-item ">
+              <a class="nav-link text-white" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Politicas.html">Terminos y Condiciones</a>
+              <a class="nav-link text-white" href="Politicas.html">Terminos y Condiciones</a>
+            </li class="nav-item">
+              <a class="nav-link text-white" href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">Gmail</a>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="https://www.facebook.com/oma.miwua" target="_blank">Facebook</a>
+            </li class="nav-item">
+            <li>
+              <a class="nav-link text-white" href="https://wa.me/573128680657" target="_blank">whatsApp</a>
             </li>
           </ul>
         </div>
@@ -145,8 +152,8 @@
     <div class="container">
       <p class="m-0 text-center text-white">Brujos y Santeros &copy; 2019</p>
 
-        <h2>(+1)559-478-1428</h2>
-    
+        <h2 class="text-center text-white">(+1)559-478-1428</h2>
+
     </div>
     <!-- /.container -->
   </footer>
