--- a/public/Politicas.html
+++ b/public/Politicas.html
@@ -66,11 +66,18 @@
         <p class="navbar-brand" href="index.html">Menu</p>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+            <li class="nav-item ">
+              <a class="nav-link text-white" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Politicas.html">Terminos y Condiciones</a>
+              <a class="nav-link text-white" href="Politicas.html">Terminos y Condiciones</a>
+            </li class="nav-item">
+              <a class="nav-link text-white" href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">Gmail</a>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="https://www.facebook.com/oma.miwua" target="_blank">Facebook</a>
+            </li class="nav-item">
+            <li>
+              <a class="nav-link text-white" href="https://wa.me/573128680657" target="_blank">whatsApp</a>
             </li>
           </ul>
         </div>
@@ -111,8 +118,8 @@
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Brujos y Santeros &copy; 2019</p>
-      
-        <h2>(+1)559-478-1428</h2>
+
+        <h2 class="text-center text-white">(+1)559-478-1428</h2>
 
     </div>
     <!-- /.container -->
