--- a/public/index.html
+++ b/public/index.html
@@ -64,19 +64,23 @@
       </a>
     </div>
     <!-- Navigation -->
-    <nav class="navbar  navbar-expand-lg navbar-ligth" style="background-color: #1ad639">
+    <nav class="navbar  navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <p class="navbar-brand" href="index.html">Menu</p>
-          <p><a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><img class="mr-1"style="width:50px;height:50px; margin-left: 400px" src="./images/gmail.jpg"></img></p>
-          <p><a href="https://www.facebook.com/oma.miwua" target="_blank"><img style="width:65px;height:65px" class=" mr-1" src="./images/face.png"></img></p>
-            <p><a href="https://www.facebook.com/oma.miwua" target="_blank"><img style="width:65px;height:65px" class=" mr-1" src="./images/wathsapp.png"></img></p>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item ">
-              <a class="nav-link" style="color:black"href="index.html">Home</a>
+              <a class="nav-link text-white" href="index.html">Home</a>
             </li>
-            <li class="nav-item text-black">
-              <a class="nav-link" href="Politicas.html">Terminos y Condiciones</a>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="Politicas.html">Terminos y Condiciones</a>
+            </li class="nav-item">
+              <a class="nav-link text-white" href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">Gmail</a>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="https://www.facebook.com/oma.miwua" target="_blank">Facebook</a>
+            </li class="nav-item">
+            <li>
+              <a class="nav-link text-white" href="https://wa.me/573128680657" target="_blank">whatsApp</a>
             </li>
           </ul>
         </div>
@@ -190,9 +194,8 @@
               <ul>
                 <li class="mt-4"><a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><img class="mr-1"style="width:50px;height:50px" src="./images/gmail.jpg"></img>omamiwua@gmail.com</a></li>
                 <li class="mt-2"><a href="https://www.facebook.com/oma.miwua" target="_blank"><img style="width:50px;height:50px" class="mt-1 mr-1" src="./images/face.png"></img>Redes sociales</a></li>
-                <a class="text-center mt-3"href="https://hangouts.google.com/" target="_blank"><h4>CHAT EN VIVO</h4></a>
               </ul>
-
+              <a class="text-center mt-3"href="https://hangouts.google.com/" target="_blank"><h4>CHAT EN VIVO</h4></a>
             </div>
           </div>
         </div>
@@ -207,11 +210,11 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5" style="background-color:#1ad639">
+  <footer class="py-5 bg-dark" >
     <div class="container">
-      <p class="m-0 text-center text-black">Brujos y Santeros &copy; 2019</p>
+      <p class="m-0 text-center text-white">Brujos y Santeros &copy; 2019</p>
 
-        <h2 class="text-center text-black">(+1)559-478-1428</h2>
+        <h2 class="text-center text-white">(+1)559-478-1428</h2>
 
     </div>
     <!-- /.container -->
