--- a/public/Politicas.html
+++ b/public/Politicas.html
@@ -32,10 +32,7 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" >
-          <img style="height: 460px; width:100%" src="/images/atena.jpg" >
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Atena de Eggun</h3>
-          </div>
+          <img style="height: 460px; width:100%" src="/images/slide.jpg" >
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" >
