--- a/public/Adivinacion.html
+++ b/public/Adivinacion.html
@@ -97,8 +97,8 @@
         <p class="text-center">Oraculo de adivinacion usado por el sacerdote mayor Babalawo para predecir el <strong>Pasado, Presente Y futuro </strong>
           de la persona con la que estas o con la que quieras ligar, mostrarte el futuro y guiarte para salir exitoso </p>
           <div class="mt-4">
-            <h2 class="text-center"> consulta completamente gratis </h2>
-            <h2 class="text-center">(+1)559-478-1428</h2>
+            <h2 class="text-center"> <strong>consulta completamente gratis</strong></h2>
+            <h2 class="text-center"><strong>(+1)559-478-1428</strong></h2>
           </div>
       </div>
     </div>
@@ -114,8 +114,8 @@
         <p class="text-center">Oráculo de Adivinación usado por Santeros Obba - Dilogun también conocidos como Caracoles. te permitiran conocer
         todo lo que te depara el futuro solo si pones fe y te ayudas tu mismo</p>
         <div class="mt-4">
-          <h2 class="text-center"> consulta completamente gratis </h2>
-          <h2 class="text-center">(+1)559-478-1428</h2>
+          <h2 class="text-center"> <strong>consulta completamente gratis</strong></h2>
+          <h2 class="text-center"><strong>(+1)559-478-1428</strong></h2>
         </div>
       </div>
     </div>
@@ -130,8 +130,8 @@
         <h1 class="text-center"><strong>Oraculo Chamalones</strong></h1>
         <p class="text-center">Oráculo de adivinación de los Paleros maestros Tata Nganga - Chamalones.</p>
         <div class="mt-4">
-          <h2 class="text-center"> consulta completamente gratis </h2>
-          <h2 class="text-center">(+1)559-478-1428</h2>
+          <h2 class="text-center"> <strong>consulta completamente gratis</strong></h2>
+          <h2 class="text-center"><strong>(+1)559-478-1428</strong></h2>
         </div>
       </div>
     </div>
@@ -150,8 +150,8 @@
         <p class="text-center">Oráculo de adivinación por medio de cartas donde podras conocer lo que te depara el futuro
           y conocer los errores del pasado que estan afectando tu presente, contamos con los mejores Maestros y Brujas con más de 30 años de Experiencia.</p>
           <div class="mt-4">
-            <h2 class="text-center"> consulta completamente gratis </h2>
-            <h2 class="text-center">(+1)559-478-1428</h2>
+            <h2 class="text-center"> <strong>consulta completamente gratis</strong></h2>
+            <h2 class="text-center"><strong>(+1)559-478-1428<</strong>/h2>
           </div>
       </div>
     </div>
@@ -166,8 +166,8 @@
         <p class="text-center">Oráculo de adivinación por medio de cartas españolas donde podras conocer lo que te depara el futuro
           y conocer los errores del pasado que estan afectando tu presente, contamos con los mejores Maestros y Brujas con más de 30 años de Experiencia.</p>
           <div class="mt-4">
-            <h2 class="text-center"> consulta completamente gratis </h2>
-            <h2 class="text-center">(+1)559-478-1428</h2>
+            <h2 class="text-center"> <strong>consulta completamente gratis</strong></h2>
+            <h2 class="text-center"><strong>(+1)559-478-1428<</strong>/h2>
           </div>
       </div>
     </div>
