--- a/public/Salud.html
+++ b/public/Salud.html
@@ -87,7 +87,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 style="text-align: center" class="mt-4 mb-3">
-      <strong>Trabajos para atraer la Salud</strong>
+      <strong>RITUALES PARA MEJORAR LA SALUD</strong>
     </h1>
 
     <!-- Project One -->
@@ -100,8 +100,8 @@
         <p class="text-center">Ayudamos a que las personas recuperen la salud y aumenten sus estado animico, recuperamos la salud quitada por trabajos de burjeria, hechiceria, magia negra,
           budoo, entierros. curamos todo tipo de enfermedad <strong>cronica</strong></p>
         <div class="mt-4">
-          <h2 style="text-align: center"> consulta completamente gratis </h2>
-          <h2 style="text-align: center">(+1)559-478-1428</h2>
+          <h2 class="text-center"> <strong>consulta completamente gratis</strong></h2>
+          <h2 class="text-center"><strong>(+1)559-478-1428</strong></h2>
         </div>
       </div>
     </div>
